src/main/java/mpei/bkm/parsing/ls/parsers/LSParser.java
package mpei.bkm.parsing.ls.parsers;// Generated from C:/bmd/bkm-lib/src/grammar\LS.g4 by ANTLR 4.6
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		Range=39, Int=40, Float=41, Name=42, EQ=43, NOTEQ=44, LT=45, LE=46, GT=47, 
		GE=48, QuotedString=49, Comment=50, Space=51;
	public static final int
		RULE_ontology = 0, RULE_sentence = 1, RULE_declaration = 2, RULE_logicalSentence = 3, 
		RULE_statement = 4, RULE_existence = 5, RULE_exist = 6, RULE_notExist = 7, 
		RULE_isa = 8, RULE_equality = 9, RULE_quantifier = 10, RULE_c = 11, RULE_l = 12, 
		RULE_p = 13, RULE_classDeclaration = 14, RULE_binaryLinkDeclaration = 15, 
		RULE_attributes = 16, RULE_attribute = 17, RULE_dataTypeAttribute = 18, 
		RULE_conceptAttribute = 19, RULE_classAttributeConstraint = 20, RULE_intervalRestriction = 21, 
		RULE_fullIntervalRestriction = 22, RULE_contractedIntervalRestriction = 23, 
		RULE_atomRestriction = 24, RULE_dataType = 25, RULE_primitiveType = 26, 
		RULE_rangeDataType = 27, RULE_labeledDataType = 28, RULE_conceptType = 29, 
		RULE_attributeConstraints = 30, RULE_elementaryAttributeConstraint = 31, 
		RULE_selector = 32, RULE_className = 33, RULE_binaryLinkName = 34, RULE_attributeValue = 35, 
		RULE_definedTypeName = 36, RULE_variable = 37, RULE_surrogate = 38, RULE_binaryOperator = 39, 
		RULE_dataValue = 40, RULE_trueorfalse = 41, RULE_number = 42, RULE_string = 43;
	public static final String[] ruleNames = {
		"ontology", "sentence", "declaration", "logicalSentence", "statement", 
		"existence", "exist", "notExist", "isa", "equality", "quantifier", "c", 
		"l", "p", "classDeclaration", "binaryLinkDeclaration", "attributes", "attribute", 
		"dataTypeAttribute", "conceptAttribute", "classAttributeConstraint", "intervalRestriction", 
		"fullIntervalRestriction", "contractedIntervalRestriction", "atomRestriction", 
		"dataType", "primitiveType", "rangeDataType", "labeledDataType", "conceptType", 
		"attributeConstraints", "elementaryAttributeConstraint", "selector", "className", 
		"binaryLinkName", "attributeValue", "definedTypeName", "variable", "surrogate", 
		"binaryOperator", "dataValue", "trueorfalse", "number", "string"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'SCHEME'", "':'", "'.'", "'END'", "'NOT'", "'AND'", "'OR'", "'IMP'", 
		"'('", "')'", "'EXIST'", "'NULL'", "'ISA'", "'EACH'", "'SOME'", "'THAT'", 
		"'THOSE'", "'INV'", "'ONLY'", "'['", "']'", "','", "'->'", "'*'", "'|'", 
		"'{'", "'}'", "'LIST'", "'LLIST'", "'Boolean'", "'Number'", "'Integer'", 
		"'Char'", "'String'", "';'", "'#'", "'TRUE'", "'FALSE'", null, null, null, 
		null, "'='", "'=/='", "'<'", "'<='", "'>'", "'>='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "Range", "Int", "Float", "Name", "EQ", "NOTEQ", "LT", 
		"LE", "GT", "GE", "QuotedString", "Comment", "Space"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LS.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class OntologyContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(LSParser.EOF, 0); }
		public TerminalNode Name() { return getToken(LSParser.Name, 0); }
		public List<SentenceContext> sentence() {
			return getRuleContexts(SentenceContext.class);
		}
		public SentenceContext sentence(int i) {
			return getRuleContext(SentenceContext.class,i);
		}
		public OntologyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ontology; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterOntology(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitOntology(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitOntology(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OntologyContext ontology() throws RecognitionException {
		OntologyContext _localctx = new OntologyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_ontology);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(88);
				match(T__0);
				setState(89);
				match(Name);
				setState(90);
				match(T__1);
				setState(94); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(91);
					sentence();
					setState(92);
					match(T__2);
					}
					}
					setState(96); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << Name))) != 0) );
				setState(98);
				match(T__3);
				}
				break;
			case T__4:
			case T__8:
			case T__10:
			case T__11:
			case T__13:
			case T__14:
			case T__16:
			case T__17:
			case Name:
				{
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(100);
					sentence();
					setState(101);
					match(T__2);
					}
					}
					setState(105); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__8) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << T__14) | (1L << T__16) | (1L << T__17) | (1L << Name))) != 0) );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(109);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenceContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public LogicalSentenceContext logicalSentence() {
			return getRuleContext(LogicalSentenceContext.class,0);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentence);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(111);
				declaration();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				logicalSentence(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public BinaryLinkDeclarationContext binaryLinkDeclaration() {
			return getRuleContext(BinaryLinkDeclarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Name:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				classDeclaration();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				binaryLinkDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalSentenceContext extends ParserRuleContext {
		public LogicalSentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalSentence; }
	 
		public LogicalSentenceContext() { }
		public void copyFrom(LogicalSentenceContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AndSentenceContext extends LogicalSentenceContext {
		public List<LogicalSentenceContext> logicalSentence() {
			return getRuleContexts(LogicalSentenceContext.class);
		}
		public LogicalSentenceContext logicalSentence(int i) {
			return getRuleContext(LogicalSentenceContext.class,i);
		}
		public AndSentenceContext(LogicalSentenceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterAndSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitAndSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitAndSentence(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrSentenceContext extends LogicalSentenceContext {
		public List<LogicalSentenceContext> logicalSentence() {
			return getRuleContexts(LogicalSentenceContext.class);
		}
		public LogicalSentenceContext logicalSentence(int i) {
			return getRuleContext(LogicalSentenceContext.class,i);
		}
		public OrSentenceContext(LogicalSentenceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterOrSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitOrSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitOrSentence(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotSentenceContext extends LogicalSentenceContext {
		public LogicalSentenceContext logicalSentence() {
			return getRuleContext(LogicalSentenceContext.class,0);
		}
		public NotSentenceContext(LogicalSentenceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterNotSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitNotSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitNotSentence(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BracketedStatementContext extends LogicalSentenceContext {
		public LogicalSentenceContext logicalSentence() {
			return getRuleContext(LogicalSentenceContext.class,0);
		}
		public BracketedStatementContext(LogicalSentenceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterBracketedStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitBracketedStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitBracketedStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class JustStatementContext extends LogicalSentenceContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public JustStatementContext(LogicalSentenceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterJustStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitJustStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitJustStatement(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImpSentenceContext extends LogicalSentenceContext {
		public List<LogicalSentenceContext> logicalSentence() {
			return getRuleContexts(LogicalSentenceContext.class);
		}
		public LogicalSentenceContext logicalSentence(int i) {
			return getRuleContext(LogicalSentenceContext.class,i);
		}
		public ImpSentenceContext(LogicalSentenceContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterImpSentence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitImpSentence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitImpSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicalSentenceContext logicalSentence() throws RecognitionException {
		return logicalSentence(0);
	}

	private LogicalSentenceContext logicalSentence(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LogicalSentenceContext _localctx = new LogicalSentenceContext(_ctx, _parentState);
		LogicalSentenceContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_logicalSentence, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				_localctx = new NotSentenceContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(120);
				match(T__4);
				setState(121);
				logicalSentence(6);
				}
				break;
			case 2:
				{
				_localctx = new JustStatementContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(122);
				statement();
				}
				break;
			case 3:
				{
				_localctx = new BracketedStatementContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(123);
				match(T__8);
				setState(124);
				logicalSentence(0);
				setState(125);
				match(T__9);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(140);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(138);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new AndSentenceContext(new LogicalSentenceContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logicalSentence);
						setState(129);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(130);
						match(T__5);
						setState(131);
						logicalSentence(6);
						}
						break;
					case 2:
						{
						_localctx = new OrSentenceContext(new LogicalSentenceContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logicalSentence);
						setState(132);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(133);
						match(T__6);
						setState(134);
						logicalSentence(5);
						}
						break;
					case 3:
						{
						_localctx = new ImpSentenceContext(new LogicalSentenceContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_logicalSentence);
						setState(135);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(136);
						match(T__7);
						setState(137);
						logicalSentence(4);
						}
						break;
					}
					} 
				}
				setState(142);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public ExistenceContext existence() {
			return getRuleContext(ExistenceContext.class,0);
		}
		public IsaContext isa() {
			return getRuleContext(IsaContext.class,0);
		}
		public EqualityContext equality() {
			return getRuleContext(EqualityContext.class,0);
		}
		public QuantifierContext quantifier() {
			return getRuleContext(QuantifierContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(147);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				existence();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				isa();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				equality();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(146);
				quantifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExistenceContext extends ParserRuleContext {
		public ExistContext exist() {
			return getRuleContext(ExistContext.class,0);
		}
		public NotExistContext notExist() {
			return getRuleContext(NotExistContext.class,0);
		}
		public ExistenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_existence; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterExistence(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitExistence(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitExistence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExistenceContext existence() throws RecognitionException {
		ExistenceContext _localctx = new ExistenceContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_existence);
		try {
			setState(151);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__10:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				exist();
				}
				break;
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				notExist();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExistContext extends ParserRuleContext {
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public ExistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).enterExist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LSListener ) ((LSListener)listener).exitExist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LSVisitor ) return ((LSVisitor<? extends T>)visitor).visitExist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExistContext exist() throws RecognitionException {
		ExistContext _localctx = new ExistContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_exist);
		try {
			setState(157);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				match(T__10);
				setState(154);
				c(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(155);
				match(T__10);
				setState(156);
				l(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotExistContext extends ParserRuleContext {
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public LContext l() {
			return getRuleContext(LContext.class,0);
		}
		public NotExistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notExist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
